codex-rs/tui2/src/status/snapshots/codex_tui2__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: tui2/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────╮
│  ⚡xtreme-Codex (v0.1.0)                                               │
│                                                                        │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date          │
│ information on rate limits and credits                                 │
│                                                                        │
│  UI:               tui2                                                │
│  Power:            ⚡⚡⚡                                              │
│  Model:            gpt-5.1-codex (reasoning none, summaries auto)      │
│  Directory: [[workspace]]                                              │
│  CODEX_HOME: [[codex_home]]                                              │
│  Approval:         on-request                                          │
│  Sandbox:          read-only                                           │
│  Agents.md:        <none>                                              │
│  Auto-compact:     disabled                                            │
│  Thoughts:         hidden                                              │
│                                                                        │
│  Token usage:      1.05K total  (700 input + 350 output)               │
│  Context window:   [████████████████████] 99% left (1.45K used / 272K) │
│  5h limit:         [████████░░░░░░░░░░░░] 40% left (resets 11:32)      │
│  Weekly limit:     [█████████████░░░░░░░] 65% left (resets 11:52)      │
│  Warning:          limits may be stale - start new turn to refresh.    │
╰────────────────────────────────────────────────────────────────────────╯
