codex-rs/tui2/src/status/snapshots/codex_tui2__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui2/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  ⚡xtreme-Codex (v0.1.0)                                                     │
│                                                                              │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date                │
│ information on rate limits and credits                                       │
│                                                                              │
│  UI:               tui2                                                      │
│  Power:            ⚡⚡⚡                                                    │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto)        │
│  Directory: [[workspace]]                                                    │
│  CODEX_HOME: [[codex_home]]                                                    │
│  Approval:         on-request                                                │
│  Sandbox:          read-only                                                 │
│  Agents.md:        <none>                                                    │
│  Auto-compact:     disabled                                                  │
│  Thoughts:         hidden                                                    │
│                                                                              │
│  Token usage:      1.9K total  (1K input + 900 output)                       │
│  Context window:   [████████████████████] 99% left (2.25K used / 272K, budge │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)            │
│  Weekly limit:     [████████████░░░░░░░░] 60% left (resets 03:34)            │
│  Warning:          limits may be stale - start new turn to refresh.          │
╰──────────────────────────────────────────────────────────────────────────────╯
